Reworked ecj benchmark to do incremental builds in batches